# x_make_common_x

./: neon_palette.py  neon_qt_theme.py  pyproject.toml
shared_typings/: cv2.pyi  utime.pyi
shared_typings/PySide6/: QtCore.pyi  QtGui.pyi  QtSvgWidgets.pyi  QtWidgets.pyi
shared_typings/_pytest/: __init__.pyi  capture.pyi  monkeypatch.pyi
shared_typings/fastapi/: __init__.pyi
shared_typings/fastapi/params/: __init__.pyi
shared_typings/fastapi/testclient/: __init__.pyi
shared_typings/framebuf/: __init__.pyi
shared_typings/httpx/: __init__.pyi
shared_typings/jsonschema/: __init__.pyi  exceptions.pyi  validators.pyi
shared_typings/jwt/: __init__.pyi
shared_typings/machine/: __init__.pyi
shared_typings/network/: __init__.pyi
shared_typings/nicegui/: __init__.pyi
shared_typings/pydantic/: __init__.pyi
shared_typings/pytest/: __init__.pyi
shared_typings/reportlab/graphics/: __init__.pyi  renderPM.pyi
shared_typings/requests/: __init__.pyi
shared_typings/st7789/: __init__.pyi
shared_typings/textual/: app.pyi
shared_typings/typer/: main.pyi  testing.pyi
shared_typings/uhashlib/: __init__.pyi
shared_typings/ujson/: __init__.pyi
shared_typings/uos/: __init__.pyi
shared_typings/uvicorn/: __init__.pyi
shared_typings/uwebsockets/: __init__.pyi
shared_typings/vga1_8x8/: __init__.pyi
shared_typings/vga2_16x32/: __init__.pyi
shared_typings/websockets/: __init__.pyi
shared_typings/x_make_common_x/: __init__.pyi  copilot_normalizer.pyi  run_reports.pyi
