[project]
name = "x_4357_make_common_x"
version = "0.20.7"
description = "Shared helpers for diagnostics, logging, environment, and subprocess control."
authors = [ { name = "RRGM", email = "eye4357@outlook.com" } ]
license = { text = "MIT License (c) 2025 RRGM (Software Tech Lead of the Primus Pilus Night Watch AI Corporation)" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://example.com/x_make_common_x"

[tool.hatch.build]
exclude = [".mypy_cache", ".ruff_cache", ".pytest_cache", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["x_make_common_x"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["shared_typings"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001", "T20"]
